refactor: new layout for backend service

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -5,9 +5,9 @@ COPY ./backend .
 RUN go build -o formunity_backend main.go
 
 # RUNTIME
-FROM gcr.io/distroless/static-debian12
+FROM gcr.io/distroless/static-debian12:nonroot
 WORKDIR /app
-COPY --from=builder /src/formunity_backend /
+COPY --from=builder --chown=65532:65532 /src/formunity_backend /
 EXPOSE 8081
-USER nonroot:nonroot
+USER 65532:65532
 CMD ["/formunity_backend"]
