fix: backend build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build (backend-service)
+      run: cd ./backend/ && go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+    - name: Test (backend-service)
+      run: cd ./backend/ && go test -v ./...
